Prevent overflow bounce on mobile

--- a/index.css
+++ b/index.css
@@ -6,9 +6,17 @@ html,
 body{
   height: 100%;
   width: 100%;
-  overflow: auto;
   display:flex;
   flex-direction: column;
+  overflow: hidden;
+  position: fixed; 
+}
+
+/* Prevent overscroll bounce */
+html,
+body{
+  overflow: hidden;
+  position: fixed; 
 }
 
 body{
